--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			<a class="navbar-brand" href="#">
 				<img src="images/mambubike-logo.svg" alt="Mambubike - Inicial">
 			</a>
-			<button class="navbar-toggler" id="btn-hamburguer" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText">
-				<i id="menu-icon" class="bi bi-list"></i>
-				<i id="close-icon" class="bi bi-x" style="display: none;"></i>
+			<button class="navbar-toggler hamburger-button" id="btn-hamburguer" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText">
+				<i id="menu-icon" class="bi bi-list"></i> <!-- Ícone do menu hamburguer -->
+				<i id="close-icon" class="bi bi-x" style="display: none;"></i> <!-- Ícone "X" (oculto por padrão) -->
 			</button>
 			<div class="navbar-collapse d-flex justify-content-end" id="navbarText">
 				<ul class="navbar-nav">
