--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 				<img src="images/mambubike-logo.svg" alt="Mambubike - Inicial">
 			</a>
 			<button class="navbar-toggler hamburger-button" id="btn-hamburguer" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText">
-				<i id="menu-icon" class="bi bi-list"></i> <!-- Ícone do menu hamburguer -->
-				<i id="close-icon" class="bi bi-x" style="display: none;"></i> <!-- Ícone "X" (oculto por padrão) -->
+				<i id="menu-icon" class="bi bi-list custon-icons"></i> <!-- Ícone do menu hamburguer -->
+				<i id="close-icon" class="bi bi-x custon-icons" style="display: none;"></i> <!-- Ícone "X" (oculto por padrão) -->
 			</button>
 			<div class="navbar-collapse d-flex justify-content-end" id="navbarText">
-				<ul class="navbar-nav">
+				<ul class="navbar-nav container-nav-bar">
 					<li class="nav-item">
 						<a class="nav-link" href="#">Sobre</a>
 					</li>
@@ -72,8 +72,10 @@
 				</ul>
 			</div>
 		</div>
-		
-	</nav>	
+	</nav>
+	
+	<!-- Elemento de plano de fundo branco -->
+	<div id="background-overlay"></div>
 	
 	<header class="header-home" id="header"> 
 	 
