--- a/index.html
+++ b/index.html
@@ -28,17 +28,12 @@
 
 		<!-- Bootstrap core CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-		
-		
-		
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">	
 		<!-- Style -->
 		<link href="style.css" rel="stylesheet" type="text/css">
 
-		
         <!-- Animação Reveal -->
         <script src="https://unpkg.com/scrollreveal"></script>
-	
 	</head>
 
 <body>
@@ -96,9 +91,9 @@
 		</div>
 
 	</header>
-	<section class="apresentacao hidden">
-			<div class="container">
-		<div class="row">
+	<section class="apresentacao">
+		<div class="container card-box-bottom">
+			<div class="row card-box">
 				<div class="col-md-4">
 					<h3>O que é</h3>
 					<p>O MambuBike é um projeto de mobilidade urbana que envolve a estruturação do sistema cicloviário no bairro Parque Mambucaba, em Angra dos Reis (RJ). Sua fase piloto foi desenvolvida ao longo de 2023, em uma parceria entre poder público, terceiro setor e com ações de participação da sociedade civil.</p>
@@ -113,33 +108,34 @@
 				</div>
 			</div>
 		</div>
+		
 	</section>
 	
-	<section class="hidden" style="background-color: #F0F2F5;">
-        <div class="container py-5">
-            <div class="main-timeline-2 hidden">
-                <div class="timeline-2 left-2 animacao">
+	<section style="background-color: #F0F2F5;">
+        <div class="container py-5 ">
+            <div class="main-timeline-2 card-box-left">
+                <div class="timeline-2 left-2 animacao hidden">
                     <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(135).webp" class="card-img-top"
+                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(135).webp" class="card-img-top "
                         alt="Responsive image">
                     <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4">Ut enim ad minim veniam</h4>
-                        <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2017</p>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        <h4 class="fw-bold mb-4 card-itens-left">Ut enim ad minim veniam</h4>
+                        <p class="text-muted mb-4 card-itens-left"><i class="far fa-clock" aria-hidden="true"></i> 2017</p>
+                        <p class="mb-0 card-itens-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                         ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                     </div>
                 </div>
                 
-                <div class="timeline-2 right-2 animacao hidden">
-                    <div class="card avatar">
+                <div class="timeline-2 right-2 card-box-right">
+                    <div class="card">
                     <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(129).webp" class="card-img-top"
                         alt="Responsive image">
                     <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4">Duis aute irure dolor</h4>
-                        <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2016</p>
-                        <p class="mb-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                        <h4 class="fw-bold mb-4 card-itens-right">Duis aute irure dolor</h4>
+                        <p class="text-muted mb-4 card-itens-right"><i class="far fa-clock" aria-hidden="true"></i> 2016</p>
+                        <p class="mb-0 card-itens-right">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                         doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
                         architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
                         aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
@@ -148,14 +144,14 @@
                     </div>
                 </div>
 
-                <div class="timeline-2 left-2 animacao hidden">
-                    <div class="card avatar">
+                <div class="timeline-2 left-2 card-box-left">
+                    <div class="card">
                     <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(131).webp" class="card-img-top"
                         alt="Responsive image">
                     <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4">Sed ut nihil unde omnis</h4>
-                        <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2015</p>
-                        <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                        <h4 class="fw-bold mb-4 card-itens-left">Sed ut nihil unde omnis</h4>
+                        <p class="text-muted mb-4 card-itens-left"><i class="far fa-clock" aria-hidden="true"></i> 2015</p>
+                        <p class="mb-0 card-itens-left">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
                         adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
                         aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
                         suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
@@ -165,14 +161,14 @@
                     </div>
                 </div>
 
-                <div class="timeline-2 right-2 animacao hidden">
-                    <div class="card avatar">
+                <div class="timeline-2 right-2 card-box-right">
+                    <div class="card">
                     <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(125).webp" class="card-img-top"
                         alt="Responsive image">
                     <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4 text-card"> Quis autem vel eum voluptate</h4>
-                        <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2014</p>
-                        <p class="mb-0">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                        <h4 class="fw-bold mb-4 card-itens-right"> Quis autem vel eum voluptate</h4>
+                        <p class="text-muted mb-4 card-itens-right"><i class="far fa-clock" aria-hidden="true"></i> 2014</p>
+                        <p class="mb-0 card-itens-right">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
                         praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                         occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
                         id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
@@ -180,14 +176,14 @@
                     </div>
                 </div>
 
-                <div class="timeline-2 left-2 animacao hidden">
-                    <div class="card avatar">
+                <div class="timeline-2 left-2 card-box-left">
+                    <div class="card">
                     <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(144).webp" class="card-img-top animacao-delay"
                         alt="Responsive image">
                     <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4">Mussum ipsum cacilds</h4>
-                        <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2013</p>
-                        <p class="mb-0">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
+                        <h4 class="fw-bold mb-4 card-itens-left">Mussum ipsum cacilds</h4>
+                        <p class="text-muted mb-4 card-itens-left"><i class="far fa-clock"></i> 2013</p>
+                        <p class="mb-0 card-itens-left">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
                         saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum
                         hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
                         perferendis doloribus asperiores repellat.</p>
@@ -198,26 +194,26 @@
         </div>
     </section>
 
-	<section class="contador hidden">
+	<section class="contador ">
 		<div class="container text-center">
-			<div class="animacao pt-4">
-				<h3 class="fw-bold mb-4"> Informações ..... </h3>
+			<div class="pt-4 card-box-bottom">
+				<h3 class="fw-bold mb-4 card-title-bottom"> Informações ..... </h3>
 	
-				<div class="row animacao-delay">
+				<div class="row ">
 					<div class="col">
-						<div class="circle">
+						<div class="circle card-itens-bottom">
 							<img class="img-icon" src="icon/bike.svg" alt="" srcset="">
 						</div>
-						<p class="text-muted mb-1 pt-2">Numero de ciclistas diariamente</p>
-						<span class="contador-start" data-counter-type="type1" data-scroll="1700">0</span>
+						<p class="text-muted mb-1 pt-2 card-itens-bottom">Numero de ciclistas diariamente</p>
+						<span class="contador-start card-itens-bottom" data-counter-type="type1" data-scroll="1700">0</span>
 					</div>
 					
 					<div class="col">
-						<div class="circle">
+						<div class="circle card-itens-bottom">
 							<img class="img-icon" src="icon/location.svg" alt="" srcset="">
 						</div>
-						<p class="text-muted mb-1 pt-2">Área da infraestrutura</p>
-						<span class="contador-start" data-counter-type="type2" data-scroll="20">0</span>
+						<p class="text-muted mb-1 pt-2 card-itens-bottom">Área da infraestrutura</p>
+						<span class="contador-start card-itens-bottom" data-counter-type="type2" data-scroll="20">0</span>
 					</div>
 				</div>			
 			</div>
@@ -232,13 +228,6 @@
 	<script src="script.js"></script>
 
 	<script>
-	window.sr = ScrollReveal({reset: true});
-
-	sr.reveal('.text-card', {
-		rotate: {x: 0, y:80, z:0},
-		delay: 300,
-		duration: 2000,
-	})
 
 	</script>
 	
