alterando de asp para html

--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
 			<div class="navbar-collapse d-flex justify-content-end" id="navbarText">
 				<ul class="navbar-nav container-nav-bar">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Sobre</a>
+						<a class="nav-link" href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Agenda</a>
+						<a class="nav-link" href="assets/sobre.asp">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Participe</a>
+						<a class="nav-link" href="assets/agenda.asp">Agenda</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="assets/participe.asp">Participe</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Biblioteca</a>
@@ -72,26 +75,25 @@
 	<!-- Elemento de plano de fundo branco -->
 	<div id="background-overlay"></div>
 	
-	<header class="header-home" id="header"> 
-	 
-	 <div class="overlay"></div>
+	<header class="header-home" id="header"></header>
 
-			<!-- The HTML5 video element that will create the background video on the header -->
-			<video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-				<source src="https://angra.rj.gov.br/mambubike/images/bike.mp4" type="video/mp4">
-			</video>
-
-			<!-- The header content -->
-			<div class="container h-100">
-				<div class="d-flex h-100 text-center align-items-center">
-					<div class="w-100 text-white">
-						<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
-					</div>
+	<section class="nome-projeto">
+		<div class="container h-100">
+			<div class="d-flex h-100 text-center align-items-center">
+				<div class="w-100">
+					<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
 				</div>
+			</div>
 		</div>
+	</section>
 
-	</header>
 	<section class="apresentacao">
+		<div class="container h-100">
+			<div class="d-flex h-100 text-center align-items-center">
+				<div class="w-100 text-white">
+					<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
+				</div>
+			</div>
 		<div class="container card-box-bottom">
 			<div class="row card-box">
 				<div class="col-md-4">
@@ -104,116 +106,33 @@
 				</div>
 				<div class="col-md-4">
 					<h3>Objetivo</h3>
-					<p>O bairro Parque Mambucaba conta com um número expressivo de ciclistas que utilizam a bicicleta como principal meio de circulação no seu cotidiano. O objetivo central do projeto é oferecer infraestrutura adequada para o deslocamento dos ciclistas, proporcionando segurança e conforto para todos os usuários, além de melhorar a integração com o transporte coletivo. Junto ao desenvolvimento do projeto urbano, diversas ações de engajamento foram programadas, visando ouvir a opinião das pessoas mais impactadas e exercitar a </p>
+					<p>O bairro Parque Mambucaba conta com um número expressivo de ciclistas que utilizam a bicicleta como principal meio de circulação no seu cotidiano. O objetivo central do projeto é oferecer infraestrutura adequada para o deslocamento dos ciclistas, proporcionando segurança e conforto para todos os usuários, além de melhorar a integração com o transporte coletivo. Junto ao desenvolvimento do projeto urbano, diversas ações de engajamento foram programadas, visando ouvir a opinião das pessoas mais impactadas e exercitar a cidadania.</p>
 				</div>
 			</div>
 		</div>
 		
 	</section>
 	
-	<section style="background-color: #F0F2F5;">
-        <div class="container py-5 ">
-            <div class="main-timeline-2 card-box-left">
-                <div class="timeline-2 left-2 animacao hidden">
-                    <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(135).webp" class="card-img-top "
-                        alt="Responsive image">
-                    <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4 card-itens-left">Ut enim ad minim veniam</h4>
-                        <p class="text-muted mb-4 card-itens-left"><i class="far fa-clock" aria-hidden="true"></i> 2017</p>
-                        <p class="mb-0 card-itens-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                    </div>
-                </div>
-                
-                <div class="timeline-2 right-2 card-box-right">
-                    <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(129).webp" class="card-img-top"
-                        alt="Responsive image">
-                    <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4 card-itens-right">Duis aute irure dolor</h4>
-                        <p class="text-muted mb-4 card-itens-right"><i class="far fa-clock" aria-hidden="true"></i> 2016</p>
-                        <p class="mb-0 card-itens-right">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
-                        sequi nesciunt.</p>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="timeline-2 left-2 card-box-left">
-                    <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(131).webp" class="card-img-top"
-                        alt="Responsive image">
-                    <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4 card-itens-left">Sed ut nihil unde omnis</h4>
-                        <p class="text-muted mb-4 card-itens-left"><i class="far fa-clock" aria-hidden="true"></i> 2015</p>
-                        <p class="mb-0 card-itens-left">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                        adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-                        aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
-                        suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
-                        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui
-                        dolorem eum fugiat quo voluptas nulla pariatur?</p>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="timeline-2 right-2 card-box-right">
-                    <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(125).webp" class="card-img-top"
-                        alt="Responsive image">
-                    <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4 card-itens-right"> Quis autem vel eum voluptate</h4>
-                        <p class="text-muted mb-4 card-itens-right"><i class="far fa-clock" aria-hidden="true"></i> 2014</p>
-                        <p class="mb-0 card-itens-right">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-                        occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
-                        id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="timeline-2 left-2 card-box-left">
-                    <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(144).webp" class="card-img-top animacao-delay"
-                        alt="Responsive image">
-                    <div class="card-body p-4">
-                        <h4 class="fw-bold mb-4 card-itens-left">Mussum ipsum cacilds</h4>
-                        <p class="text-muted mb-4 card-itens-left"><i class="far fa-clock"></i> 2013</p>
-                        <p class="mb-0 card-itens-left">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
-                        saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum
-                        hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                        perferendis doloribus asperiores repellat.</p>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 	<section class="contador ">
 		<div class="container text-center">
 			<div class="pt-4 card-box-bottom">
-				<h3 class="fw-bold mb-4 card-title-bottom"> Informações ..... </h3>
-	
+				<h3 class="fw-bold mb-4 card-title-bottom text-uppercase"> Números de impacto do projeto </h3>
+
 				<div class="row ">
 					<div class="col">
 						<div class="circle card-itens-bottom">
-							<img class="img-icon" src="icon/bike.svg" alt="" srcset="">
+							<img class="img-icon" src="icon/bike.svg" srcset="">
 						</div>
-						<p class="text-muted mb-1 pt-2 card-itens-bottom">Numero de ciclistas diariamente</p>
 						<span class="contador-start card-itens-bottom" data-counter-type="type1" data-scroll="1700">0</span>
+						<p class="text-muted mb-1 pt-2 card-itens-bottom">Paraciclos instalados</p>
 					</div>
 					
 					<div class="col">
 						<div class="circle card-itens-bottom">
-							<img class="img-icon" src="icon/location.svg" alt="" srcset="">
+							<img class="img-icon" src="icon/location.svg" srcset="">
 						</div>
-						<p class="text-muted mb-1 pt-2 card-itens-bottom">Área da infraestrutura</p>
 						<span class="contador-start card-itens-bottom" data-counter-type="type2" data-scroll="20">0</span>
+						<p class="text-muted mb-1 pt-2 card-itens-bottom">Instraestrutura cicloviária</p>
 					</div>
 				</div>			
 			</div>
@@ -225,7 +144,7 @@
 	</div> 
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="script.js"></script>
+	<script src="scripts.js"></script>
 	<script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
 	<script>
 		var ht = new HT({
