--- a/assets/participe.html
+++ b/assets/participe.html
@@ -1,7 +1,7 @@
-<%@LANGUAGE="VBSCRIPT" CODEPAGE="65001"%>
+<!-- <%@LANGUAGE="VBSCRIPT" CODEPAGE="65001"%>
 <!--#include file="../../include/Conn-G.asp"-->
 <!--#include file="../../include/aspjson.asp"-->
-
+ -->
 <!DOCTYPE html>
 <html lang="pt-br">
 
