--- a/assets/sobre.html
+++ b/assets/sobre.html
@@ -50,16 +50,16 @@
 			<div class="navbar-collapse d-flex justify-content-end" id="navbarText">
 				<ul class="navbar-nav container-nav-bar">
                     <li class="nav-item">
-						<a class="nav-link" href="../index.asp">Home</a>
+						<a class="nav-link" href="../index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="../index.asp">Sobre</a>
+						<a class="nav-link" href="sobre.html">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="agenda.asp">Agenda</a>
+						<a class="nav-link" href="#">Agenda</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="participe.asp">Participe</a>
+						<a class="nav-link" href="participe.html">Participe</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Biblioteca</a>
