--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 						<a class="nav-link" href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="assets/sobre.asp">Sobre</a>
+						<a class="nav-link" href="assets/sobre.html">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="assets/agenda.asp">Agenda</a>
+						<a class="nav-link" href="assets/agenda.html">Agenda</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="assets/participe.asp">Participe</a>
+						<a class="nav-link" href="assets/participe.html">Participe</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Biblioteca</a>
@@ -75,11 +75,11 @@
 	<!-- Elemento de plano de fundo branco -->
 	<div id="background-overlay"></div>
 	
-	<header class="header-home" id="header"></header>
+	<header class="header-home card-box-bottom" id="header"></header>
 
 	<section class="nome-projeto">
-		<div class="container h-100">
-			<div class="d-flex h-100 text-center align-items-center">
+		<div class="container">
+			<div class="d-flex text-center align-items-center card-box-bottom">
 				<div class="w-100">
 					<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
 				</div>
@@ -88,25 +88,19 @@
 	</section>
 
 	<section class="apresentacao">
-		<div class="container h-100">
-			<div class="d-flex h-100 text-center align-items-center">
-				<div class="w-100 text-white">
-					<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
-				</div>
-			</div>
 		<div class="container card-box-bottom">
 			<div class="row card-box">
 				<div class="col-md-4">
-					<h3>O que é</h3>
-					<p>O MambuBike é um projeto de mobilidade urbana que envolve a estruturação do sistema cicloviário no bairro Parque Mambucaba, em Angra dos Reis (RJ). Sua fase piloto foi desenvolvida ao longo de 2023, em uma parceria entre poder público, terceiro setor e com ações de participação da sociedade civil.</p>
+					<h3 class="card-itens-bottom">O que é</h3>
+					<p class="card-itens-bottom">O MambuBike é um projeto de mobilidade urbana que envolve a estruturação do sistema cicloviário no bairro Parque Mambucaba, em Angra dos Reis (RJ). Sua fase piloto foi desenvolvida ao longo de 2023, em uma parceria entre poder público, terceiro setor e com ações de participação da sociedade civil.</p>
 				</div>
 				<div class="col-md-4">
-					<h3>Quem somos</h3>
-					<p>O MambuBike é uma ação integrada, desenvolvida pela Prefeitura de Angra dos Reis, por meio da Secretaria Executiva de Ordem Pública e Mobilidade Urbana e da Secretaria de Desenvolvimento Regional, com assistência técnica da Iniciativa Mobilidade em Transformação. A Iniciativa é composta pelas organizações Cidade Ativa e Fundação Grupo Volkswagen, e contou com parcerias especializadas em diversas etapas de implementação do MambuBike.</p>
+					<h3 class="card-itens-bottom">Quem somos</h3>
+					<p class="card-itens-bottom">O MambuBike é uma ação integrada, desenvolvida pela Prefeitura de Angra dos Reis, por meio da Secretaria Executiva de Ordem Pública e Mobilidade Urbana e da Secretaria de Desenvolvimento Regional, com assistência técnica da Iniciativa Mobilidade em Transformação. A Iniciativa é composta pelas organizações Cidade Ativa e Fundação Grupo Volkswagen, e contou com parcerias especializadas em diversas etapas de implementação do MambuBike.</p>
 				</div>
 				<div class="col-md-4">
-					<h3>Objetivo</h3>
-					<p>O bairro Parque Mambucaba conta com um número expressivo de ciclistas que utilizam a bicicleta como principal meio de circulação no seu cotidiano. O objetivo central do projeto é oferecer infraestrutura adequada para o deslocamento dos ciclistas, proporcionando segurança e conforto para todos os usuários, além de melhorar a integração com o transporte coletivo. Junto ao desenvolvimento do projeto urbano, diversas ações de engajamento foram programadas, visando ouvir a opinião das pessoas mais impactadas e exercitar a cidadania.</p>
+					<h3 class="card-itens-bottom">Objetivo</h3>
+					<p class="card-itens-bottom">O bairro Parque Mambucaba conta com um número expressivo de ciclistas que utilizam a bicicleta como principal meio de circulação no seu cotidiano. O objetivo central do projeto é oferecer infraestrutura adequada para o deslocamento dos ciclistas, proporcionando segurança e conforto para todos os usuários, além de melhorar a integração com o transporte coletivo. Junto ao desenvolvimento do projeto urbano, diversas ações de engajamento foram programadas, visando ouvir a opinião das pessoas mais impactadas e exercitar a cidadania.</p>
 				</div>
 			</div>
 		</div>
