--- a/assets/agenda.html
+++ b/assets/agenda.html
@@ -75,11 +75,11 @@
 	<!-- Elemento de plano de fundo branco -->
 	<div id="background-overlay"></div>
 	
-	<header class="header-home" id="header"></header>
+	<header class="header-home card-box-bottom" id="header"></header>
 
 	<section class="nome-projeto">
 		<div class="container h-100">
-			<div class="d-flex h-100 text-center align-items-center">
+			<div class="d-flex text-center align-items-center card-box-bottom">
 				<div class="w-100">
 					<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
 				</div>
@@ -87,7 +87,7 @@
 		</div>
 	</section>
 	
-	<section style="background-color: #F0F2F5;">
+	<section>
         <div class="container py-5 ">
             <div class="main-timeline-2">
 
