--- a/assets/sobre.html
+++ b/assets/sobre.html
@@ -53,10 +53,10 @@
 						<a class="nav-link" href="../index.html">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="sobre.html">Sobre</a>
+						<a class="nav-link" href="#">Sobre</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Agenda</a>
+						<a class="nav-link" href="agenda.html">Agenda</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="participe.html">Participe</a>
@@ -72,14 +72,11 @@
 		</div>
 	</nav>
 	
-	<!-- Elemento de plano de fundo branco -->
-	<div id="background-overlay"></div>
-	
-	<header class="header-home" id="header"></header>
+	<header class="header-home card-box-bottom" id="header"></header>
 
 	<section class="nome-projeto">
 		<div class="container h-100">
-			<div class="d-flex h-100 text-center align-items-center">
+			<div class="d-flex text-center align-items-center card-box-bottom">
 				<div class="w-100">
 					<h1>Mobilidade urbana e estruturação do sistema cicloviário no Parque Mambucaba, em Angra dos Reis </h1>
 				</div>
@@ -87,31 +84,31 @@
 		</div>
 	</section>
 	
-	<section class="sobre" style="background-color: #F0F2F5;">
-        <div class="container py-5 text-center">
-			<h3 class="fw-bold mb-4 card-title-bottom text-uppercase"> Sobre o Projeto Mambubike </h3>
+	<section class="sobre">
+        <div class="container text-center">
+			<h3 class="fw-bold mb-4 card-title-bottom text-uppercase card-box-bottom"> Sobre o Projeto Mambubike </h3>
 
-			<p>
+			<p class="card-box-bottom">
 				Atualmente, a utilização da bicicleta como modal de transporte dentro do bairro ocorre de forma intensa e espontânea, porém sem infraestrutura ou sinalização adequadas. Dessa forma, o projeto surge para proporcionar segurança e conforto para os usuários a fim de atender além da demanda atual, já bastante significativa, criar condições para atrair a demanda reprimida. 
 			</p>
 			<br>
-			<p>
+			<p class="card-box-bottom">
 				O projeto do sistema cicloviário é composto por ciclorrotas, ciclofaixas, paraciclos e sinalização vertical e horizontal. Além disso, o projeto também prevê ações de participação social e atividades educativas antes, durante e após a sua implementação.
 			</p>
 			<br>
-			<p>
+			<p class="card-box-bottom">
 				O MambuBike é um projeto da Prefeitura Municipal de Angra dos Reis para o Parque Mambucaba, por meio da Secretaria Executiva de Ordem Pública e Mobilidade Urbana e da Secretaria de Desenvolvimento Regional, realizado com apoio da Iniciativa Mobilidade em Transformação, desenvolvida pela Cidade Ativa e Fundação Grupo Volkswagen.
 			</p>
 			<br>
-			<p>
+			<p class="card-box-bottom">
 				A Cidade Ativa é uma organização social que atua por cidades mais acolhedoras, resilientes e saudáveis. A organização se orienta pela observação atenta de espaços e escuta sensível de pessoas, resultando na cocriação de estratégias, políticas, planos e projetos urbanos que transformam cidades em lugares mais inclusivos e com maior qualidade de vida. A Cidade Ativa atua desde 2014 para que todas as pessoas possam ter melhores condições de vida, com garantia de acesso a espaços qualificados e serviços públicos. 
 			</p>
 			<br>
-			<p>
+			<p class="card-box-bottom">
 				A Fundação Grupo Volkswagen desenvolve iniciativas sociais e educacionais desde 1979, com mais de 3 milhões de brasileiros já beneficiados, dos quais 112 mil foram apenas em 2022. A missão do FGVW é promover transformações positivas que impulsionem melhorias na educação e que mobilizem cidadãos para atuarem como protagonistas do desenvolvimento sustentável de comunidades. Atualmente, suas causas prioritárias são mobilidade urbana e comunidades sustentáveis, mobilidade social e inclusão.
 			</p>
 			<br>
-			<p>
+			<p class="card-box-bottom">
 				Em sua fase piloto, o projeto contou com uma ação de apoio, em forma de assistência técnica, promovida pela Iniciativa Mobilidade em Transformação e com a parceria da Zoom Urbanismo Arquitetura e Design.
 			</p>
         </div>
