--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="pt-4 card-box-bottom">
 				<h3 class="fw-bold mb-4 card-title-bottom text-uppercase"> Números de impacto do projeto </h3>
 
-				<div class="row ">
+				<div class="row pt-lg-5">
 					<div class="col">
 						<div class="circle card-itens-bottom">
 							<img class="img-icon" src="icon/bike.svg" srcset="">
