--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 	<!-- Elemento de plano de fundo branco -->
 	<div id="background-overlay"></div>
 	
-	<header class="header-home card-box-bottom" id="header"></header>
+	<header class="header-home card-box-bottom" id="header">
+		<img src="images/Mambu_Bike.gif" alt="" id="imagemLogo">
+	</header>
 
 	<section class="nome-projeto">
 		<div class="container">
